--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-serve --content public --hot"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "node-fetch": "^2.1.2"
   }
 }
